--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "bs",
-  "version": "0.1.0",
-  "description": "Generates a shim for a given browser",
-  "main": "index.js",
-  "scripts": {
-    "test": "./node_modules/.bin/mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/marcello3d/node-shimmy.git"
-  },
-  "dependencies": {
-    "es5-compat-table": "git://github.com/kangax/es5-compat-table.git#0d1c7f281f",
-    "semver": "1.1.3"
-  },
-  "devDependencies": {
-    "mocha": "1.8.1"
-  },
-  "keywords": [
-    "html",
-    "html5",
-    "shim",
-    "es5",
-    "es6",
-    "compatibility"
-  ],
-  "author": "Marcello Bastéa-Forte <marcello@cellosoft.com>",
-  "license": "zlib",
-  "readmeFilename": "Readme.md"
+    "name": "bs",
+    "version": "0.1.0",
+    "description": "Generates a shim for a given browser",
+    "main": "index.js",
+    "scripts": {
+        "test": "./node_modules/.bin/mocha"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/marcello3d/node-shimmy.git"
+    },
+    "dependencies": {
+        "es5-compat-table": "git://github.com/kangax/es5-compat-table.git#0d1c7f281f",
+        "semver": "1.1.3"
+    },
+    "devDependencies": {
+        "mocha": "1.8.1",
+        "useragent": "2.0.1"
+    },
+    "keywords": [
+        "html",
+        "html5",
+        "shim",
+        "es5",
+        "es6",
+        "compatibility",
+        "useragent"
+    ],
+    "author": "Marcello Bastéa-Forte <marcello@cellosoft.com>",
+    "license": "zlib",
+    "readmeFilename": "Readme.md"
 }
